Added main js file

--- a/index.html
+++ b/index.html
@@ -1,10 +1,14 @@
 <html>
 	<head>
-		<script type="text/javascript"></script>
+		<script type="text/javascript" src"main.js"></script>
 	</head>
 	<body>
-		<div>
+		<div id="titlebar">
 			Code Visualizer!
+		</div>
+		<div id="lpanel">
+		</div>
+		<div id="rpanel">
 		</div>
 	</body>
 </html>
