--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
-		<script type="text/javascript" src"main.js"></script>
+		<script type="text/javascript" src="main.js"></script>
+		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 	</head>
 	<body>
 		<div id="titlebar">
