Made Basic Layout with resizable panels

--- a/index.html
+++ b/index.html
@@ -1,15 +1,25 @@
 <html>
 	<head>
+		<script type="text/javascript" src="jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="jquery-ui-1.10.1.custom.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
+		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
 	</head>
 	<body>
 		<div id="titlebar">
-			Code Visualizer!
+			<div id="title">
+				Code Visualizer!
+			</div>
 		</div>
-		<div id="lpanel">
-		</div>
-		<div id="rpanel">
+		<div id="content">
+			<div id="lpanel">
+				Left
+			</div>
+			<div id="rpanel">
+				Right
+			</div>
+			<div class="clear"></div>
 		</div>
 	</body>
 </html>
