Added some more classes and functions

--- a/index.html
+++ b/index.html
@@ -13,11 +13,17 @@
 			</div>
 		</div>
 		<div id="content">
-			<div id="lpanel">
-				Left
+			<div id="lpanel"> 
+				<form action="#">
+     			<textarea name="post-input"></textarea>
+      			<input type="submit" value="Post">
+    			</form>
 			</div>
 			<div id="rpanel">
-				Right
+				<form action="#">
+     			<textarea name="post-input"></textarea>
+      			<input type="submit" value="Post">
+    			</form>
 			</div>
 			<div class="clear"></div>
 		</div>
