Ajax post to clousure compiler

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
 		</div>
 		<div id="content">
 			<div id="lpanel"> 
-				<form action="#">
-     			<textarea name="post-input"></textarea>
-      			<input type="submit" value="Post">
+				<form action="javascript:compileCode()">
+     				<textarea id="js_code" cols="50" rows="5"></textarea>
+     				<input id="compilation_level" type="hidden" name="compilation_level" value="WHITESPACE_ONLY">
+    				<input id="output_format" type="hidden" name="output_format" value="text">
+    				<input id="output_info" type="hidden" name="output_info" value="compiled_code">
+      				<input type="submit" value="Optimize">
     			</form>
 			</div>
 			<div id="rpanel">
-				<form action="#">
-     			<textarea name="post-input"></textarea>
-      			<input type="submit" value="Post">
-    			</form>
+				<div id="optimized_code">
+
+				</div>
 			</div>
 			<div class="clear"></div>
 		</div>
