added file selection

--- a/static/index.html
+++ b/static/index.html
@@ -12,6 +12,9 @@
 				Code Visualizer!
 			</div>
 		</div>
+		<div id="file_select">
+			<button type="button" id = "select_button" onclick= $("#file_select").slideUp();>Click Me!</button>
+		</div>
 		<div id="content">
 			<div id="lpanel"> 
 				<form action="javascript:compileCode()">
