Added abstractions & changed optimize_code ID

--- a/static/index.html
+++ b/static/index.html
@@ -26,7 +26,7 @@
 			</div>
 			<div id="rpanel">
 				<h2>Code Info</h2>
-				<textarea disabled id="optimized_code">Optimized_Code</textarea>
+				<textarea disabled id="code_content">Optimized_Code</textarea>
 			</div>
 			<div class="clear"></div>
 		</div>
