--- a/static/index.html
+++ b/static/index.html
@@ -17,17 +17,25 @@
 		<div id="content">
 			<div id="lpanel"> 
 				<h2>Code Editor</h2>
-				<form action="javascript:sendCode()">
-     				<textarea id="js_code"></textarea>
-     				<input id="compilation_level" type="hidden" name="compilation_level" value="WHITESPACE_ONLY">
-    				<input id="output_info" type="hidden" name="output_info" value="compiled_code">
-      				<input type="submit" value="Optimize">
-    			</form>
+				<div id="editor_area">
+					<form action="javascript:sendCode()">
+     					<textarea id="js_code"></textarea>
+     					<input id="compilation_level" type="hidden" name="compilation_level" value="WHITESPACE_ONLY">
+    					<input id="output_info" type="hidden" name="output_info" value="compiled_code">
+      					<input type="submit" value="Optimize">
+    				</form>
+    			</div>
 			</div>
 			<div id="rpanel">
-				<h2>Code Info</h2>
-				<textarea disabled id="code_content">Optimized_Code</textarea>
+				<h2 id="code_info">Code Info</h2>
+				<h2 id="visualizer">Visualizer</h2>
+				<div id="info_area">
+					<textarea disabled id="code_content">Optimized_Code</textarea>
+				</div>
 			</div>
 			<div class="clear"></div>
+		</div>
+		<div>
+			CMU 15237
 		</div>
 	</body>
