--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 		<script type="text/javascript" src="jquery-1.9.1.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.10.1.custom.js"></script>
 		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="compileCode.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
 	</head>
@@ -30,7 +31,7 @@
 				<h2 id="code_info">Code Info</h2>
 				<h2 id="visualizer">Visualizer</h2>
 				<div id="info_area">
-					<textarea disabled id="code_content">Optimized_Code</textarea>
+					<textarea disabled id="code_content">Optimized Code</textarea>
 				</div>
 			</div>
 			<div class="clear"></div>
