--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,8 @@
 		<script type="text/javascript" src="compileCode.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
+		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+		<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
 	</head>
 	<body>
 		<div id="titlebar">
