--- a/static/index.html
+++ b/static/index.html
@@ -11,9 +11,20 @@
 			<div id="title">
 				Code Visualizer!
 			</div>
-			<div id="file_select">
-			</div>
 		</div>
+
+		<!-- Login Div Overlay -->
+		<div id = "login_div">
+			<label>Username:</label>
+			<input type="text" id = "login_input" placeholder = "John" name = "username">
+			<button id = "login_button" onclick = "login()">Log In</button>
+		</div>
+
+		<!-- file_select Div Overlay -->
+		<div id="file_select">
+		</div>
+
+		<!-- Start Content -->
 		<div id="content">
 			<div id="lpanel"> 
 				<h2>Code Editor</h2>
