--- a/static/index.html
+++ b/static/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<div id="titlebar">
 			<div id="title">
-				Code Visualizer!
+				Code Visualizer
 			</div>
 		</div>
 
@@ -32,12 +32,10 @@
 			<div id="lpanel"> 
 				<h2>Code Editor</h2>
 				<div id="editor_area">
-					<form action="javascript:sendCode()">
-     					<textarea id="js_code"></textarea>
-     					<input id="compilation_level" type="hidden" name="compilation_level" value="WHITESPACE_ONLY">
-    					<input id="output_info" type="hidden" name="output_info" value="compiled_code">
-      					<input type="submit" value="Optimize">
-    				</form>
+     				<textarea id="js_code"></textarea>
+     				<input id="compilation_level" type="checkbox" name="compilation_level">Optimize<br>
+      				<input id="submitCode" type="button" value="Compile">
+    				<input id="saveCode" type="button" value="Save">
     			</div>
 			</div>
 			<div id="rpanel">
@@ -48,8 +46,5 @@
 				</div>
 			</div>
 			<div class="clear"></div>
-		</div>
-		<div>
-			CMU 15237
 		</div>
 	</body>
