reverted jquery to 1.8.3 minified, added a lightbox plugin called reveal

--- a/static/index.html
+++ b/static/index.html
@@ -1,13 +1,17 @@
 <html>
 	<head>
-		<script type="text/javascript" src="jquery-1.9.1.js"></script>
+		<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.10.1.custom.js"></script>
 		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="compileCode.js"></script>
+		<script type="text/javascript" src="reveal/jquery.reveal.js"></script>
+
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
+		<link rel="stylesheet" type="text/css" href="reveal/reveal.css" media="all">
 		<link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link href='http://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
+
 	</head>
 	<body>
 		<div id="titlebar">
@@ -24,7 +28,7 @@
 		</div>
 
 		<!-- file_select Div Overlay -->
-		<div id="file_select">
+		<div id="file_select" class="reveal-modal">
 		</div>
 
 		<!-- Start Content -->
