made some tweaks

--- a/static/index.html
+++ b/static/index.html
@@ -29,6 +29,7 @@
 
 		<!-- file_select Div Overlay -->
 		<div id="file_select" class="reveal-modal">
+			<a class="close-reveal-modal">&#215;</a>
 		</div>
 
 		<!-- Start Content -->
