--- a/static/index.html
+++ b/static/index.html
@@ -48,6 +48,14 @@
 				<h2 id="visualizer">Visualizer</h2>
 				<div id="info_area">
 					<textarea disabled id="code_content">Optimized Code</textarea>
+					<div id="stat_area">
+						<h3>Statistics:</h3>
+						<p>No statistics</p>
+					</div>
+					<div id="warning_area">
+						<h3>Warnings:</h3>
+						<p>No warnings</p>
+					</div>
 				</div>
 			</div>
 			<div class="clear"></div>
