added some links

--- a/static/index.html
+++ b/static/index.html
@@ -18,6 +18,14 @@
 			<div id="title">
 				Code Visualizer
 			</div>
+			<ul id = "navbar">
+				<li class = "nav_button">
+					Create New File
+				</li>
+				<li class="nav_button">
+					Load File
+				</li>
+			</ul>
 		</div>
 
 		<!-- Login Div Overlay -->
