added another modal popup for file creation, still need to add checking for existing filename

--- a/static/index.html
+++ b/static/index.html
@@ -35,6 +35,12 @@
 			<button id = "login_button" onclick = "login()">Log In</button>
 		</div>
 
+		<!-- Create file Overlay -->
+		<div id = "create_file_popup" class = "reveal-modal">
+			<input type="text" id = "filename_input" placeholder = "filename" name = "username">
+			<a class="close-reveal-modal">&#215;</a>
+		</div>
+
 		<!-- file_select Div Overlay -->
 		<div id="file_select" class="reveal-modal">
 			<a class="close-reveal-modal">&#215;</a>
