added correct modal close binding to create button

--- a/static/index.html
+++ b/static/index.html
@@ -37,7 +37,8 @@
 
 		<!-- Create file Overlay -->
 		<div id = "create_file_popup" class = "reveal-modal">
-			<input type="text" id = "filename_input" placeholder = "filename" name = "username">
+			<input type="text" id = "filename_input" placeholder = "filename" name = "filename">
+			<button id = "create_button" class ="close-reveal-modal" onclick = "createFile()">Create</button>
 			<a class="close-reveal-modal">&#215;</a>
 		</div>
 
