--- a/static/index.html
+++ b/static/index.html
@@ -15,9 +15,9 @@
 	</head>
 	<body>
 		<div id="titlebar">
-			<div id="title">
+			<h1 id="title">
 				Code Visualizer
-			</div>
+			</h1>
 			<ul id = "navbar">
 				<li class = "nav_button">
 					Create New File
