loading is functional now

--- a/static/index.html
+++ b/static/index.html
@@ -64,11 +64,11 @@
 					<textarea disabled id="code_content">Optimized Code</textarea>
 					<div id="stat_area">
 						<h3>Statistics:</h3>
-						<p>No statistics</p>
+						<p id = "stats_text">No statistics</p>
 					</div>
 					<div id="warning_area">
 						<h3>Warnings:</h3>
-						<p>No warnings</p>
+						<p id = "warning_text">No warnings</p>
 					</div>
 				</div>
 			</div>
