stylingh for buttons

--- a/static/index.html
+++ b/static/index.html
@@ -53,8 +53,8 @@
 				<div id="editor_area">
      				<textarea id="js_code"></textarea>
      				<input id="compilation_level" type="checkbox" name="compilation_level">Optimize<br>
-      				<input id="submitCode" type="button" value="Compile">
-    				<input id="saveCode" type="button" value="Save">
+      				<button id="submitCode">Compile</button>
+    				<button id="saveCode">Save</button>
     			</div>
 			</div>
 			<div id="rpanel">
