--- a/static/index.html
+++ b/static/index.html
@@ -38,7 +38,7 @@
 		<!-- Create file Overlay -->
 		<div id = "create_file_popup" class = "reveal-modal">
 			<input type="text" id = "filename_input" placeholder = "filename" name = "filename">
-			<button id = "create_button" class ="close-reveal-modal" onclick = "createFile()">Create</button>
+			<button id = "create_button" class ="closer" onclick = "createFile()">Create</button>
 		</div>
 
 		<!-- file_select Div Overlay -->
