added shadow styling

--- a/static/index.html
+++ b/static/index.html
@@ -19,10 +19,10 @@
 				Code Visualizer
 			</h1>
 			<ul id = "navbar">
-				<li class = "nav_button" id = "create_button">
+				<li class = "nav_button left" id = "create_button">
 					Create New File
 				</li>
-				<li class="nav_button" id = "load_button">
+				<li class= "nav_button right" id = "load_button">
 					Load File
 				</li>
 			</ul>
