added logout funtionality

--- a/static/index.html
+++ b/static/index.html
@@ -26,6 +26,12 @@
 					Load File
 				</li>
 			</ul>
+			<ul id = "userbar">
+				<li class = "user_button" id = "user">
+				</li>
+				<li class= "user_button" id = "logout_button">
+				</li>
+			</ul>
 		</div>
 
 		<!-- Login Div Overlay -->
