--- a/static/index.html
+++ b/static/index.html
@@ -15,10 +15,7 @@
 	</head>
 	<body>
 		<div id="titlebar">
-			<img src = "logo.png"></img>
-			<h1 id="title">
-				Code Visualizer
-			</h1>
+			<img src = "logo.png" id = "title" height = "27" width = "250"></img>
 			<ul id = "navbar">
 				<li class = "nav_button left" id = "create_button">
 					Create New File
