--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
 		<script type="text/javascript" src="main.js"></script>
 		<script type="text/javascript" src="compileCode.js"></script>
 		<script type="text/javascript" src="reveal/jquery.reveal.js"></script>
-
+		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
 		<link rel="stylesheet" type="text/css" href="reveal/reveal.css" media="all">
