Tying together code parsing data with visualizations

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 		<script type="text/javascript" src="jquery-1.8.3.min.js"></script>
 		<script type="text/javascript" src="jquery-ui-1.10.1.custom.js"></script>
 		<script type="text/javascript" src="main.js"></script>
+		<script type="text/javascript" src="parse.js"></script>
 		<script type="text/javascript" src="compileCode.js"></script>
 		<script type="text/javascript" src="reveal/jquery.reveal.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
