Cleanup & UI tweaks

--- a/static/index.html
+++ b/static/index.html
@@ -57,7 +57,8 @@
 				<h2>Code Editor</h2>
 				<div id="editor_area">
      				<textarea id="js_code"></textarea>
-     				<input id="compilation_level" type="checkbox" name="compilation_level">Optimize<br>
+     				<input id="compilation_level" type="checkbox" name="compilation_level">
+     				<p id="optimize_checkbox">Optimize</p>
       				<button id="submitCode">Compile</button>
     				<button id="saveCode">Save</button>
     			</div>
