--- a/static/index.html
+++ b/static/index.html
@@ -6,6 +6,7 @@
 		<script type="text/javascript" src="parse.js"></script>
 		<script type="text/javascript" src="compileCode.js"></script>
 		<script type="text/javascript" src="reveal/jquery.reveal.js"></script>
+		<script type="text/javascript" src="textAreaTab.js"></script>
 		<script src="http://d3js.org/d3.v3.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="style.css" media="all">
 		<link rel="stylesheet" type="text/css" href="jquery-ui.css" media="all">
