Added tab effect to right panel

--- a/static/index.html
+++ b/static/index.html
@@ -66,7 +66,7 @@
 			</div>
 			<div id="rpanel">
 				<ul id="rpanel_tabs">
-					<li id="code_info">Code Info</li>
+					<li id="code_info" class="selected">Code Info</li>
 					<li id="visualizer">Visualizer</li>
 				</ul>
 				<div id="info_area">
