bug fixes and change to notification behavior

--- a/static/index.html
+++ b/static/index.html
@@ -32,6 +32,8 @@
 				</li>
 			</ul>
 		</div>
+		<div id = "notification_bar">
+		</div>
 
 		<!-- Login Div Overlay -->
 		<div id = "login_div">
