--- a/static/index.html
+++ b/static/index.html
@@ -63,7 +63,7 @@
      				Optimization Level:
      				<input type="radio" name="compilation_level" value="WHITESPACE_ONLY" checked>Basic
      				<input type="radio" name="compilation_level" value="SIMPLE_OPTIMIZATIONS">Medium
-     				<input type="radio" name="compilation_level" value="ADVANCED_OPTIMIZATIONS">Agreesive<br>
+     				<input type="radio" name="compilation_level" value="ADVANCED_OPTIMIZATIONS">Agressive<br>
     				<button id="saveCode">Save</button>
     			</div>
 			</div>
