turned off spell check

--- a/static/index.html
+++ b/static/index.html
@@ -58,7 +58,7 @@
 			<div id="lpanel"> 
 				<h2 id="status">Temporary file</h2>
 				<div id="editor_area">
-     				<textarea id="js_code"></textarea>
+     				<textarea id="js_code" spellcheck="false"></textarea>
      				<button id="submitCode">Compile</button>
      				Optimization Level:
      				<input type="radio" name="compilation_level" value="WHITESPACE_ONLY" checked>Basic
