Login description done

--- a/static/index.html
+++ b/static/index.html
@@ -37,17 +37,18 @@
 
 		<!-- Login Div Overlay -->
 		<div id = "login_div">
+			<h1>Welcome to code visualizer!</h1>
+
 			<label>Username:</label>
 			<input type="text" id = "login_input" placeholder = "John" name = "username">
 			<button id = "login_button" onclick = "login()">Log In</button>
 			
-			<h1><br>Welcome to code visualizer!</h1>
-			<p>This is a JavaScript editor that can compile, optimize and visualize your code. Our features include:</p>
+			<p><br>This is a JavaScript editor that can compile, optimize and visualize your code. Our features include:</p>
 			<ul>
 				<li>Saving to our server for easy access</li>
 				<li>Warnings and Error checking during compile</li>
 				<li>Three code optimization levels on compile</li>
-				<li>YHandy visualization feature to see the relationships between functions.</li>
+				<li>Handy visualization feature to see the relationships between functions.</li>
 			</ul>
 		</div>
 
