had to remove CSS transitions from project, since we are not allowed

--- a/static/index.html
+++ b/static/index.html
@@ -37,8 +37,8 @@
 
 		<!-- Login Div Overlay -->
 		<div id = "login_div">
-			<h1>Welcome to code visualizer!</h1>
-
+			<h1>Welcome to CodeVisualizer!</h1>
+			<br>
 			<label>Username:</label>
 			<input type="text" id = "login_input" placeholder = "John" name = "username">
 			<button id = "login_button" onclick = "login()">Log In</button>
